fixing contrast error

--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -403,7 +403,7 @@ footer p {
 }
 
 #company-section > div > p {
-  color: #505152;
+  color: #393d3d;
   border-bottom: 1px solid #b6b5b5 ;
   padding-bottom: 10px;
 }
